fixed spacing

--- a/css/main.css
+++ b/css/main.css
@@ -329,7 +329,7 @@ img{
 }
 
 .info_list + .btn_wrapper{
-    margin-top: 1em;
+    margin-top: 2.375em;
 }
 
 .info_list-link{
